--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,9 @@
 
   <properties>
     <java.version>1.8</java.version>
-    <mybatisplus.version>3.1.0</mybatisplus.version>
+    <mybatisplus.version>3.1.1</mybatisplus.version>
     <mybatisplus.gegerator.version>3.2.0</mybatisplus.gegerator.version>
-    <druid.version>1.1.17</druid.version>
+    <druid.version>1.1.21</druid.version>
     <freemarker.version>2.3.28</freemarker.version>
     <rocketmq-client.version>4.3.0</rocketmq-client.version>
     <rocketmq-springboot.version>2.1.0</rocketmq-springboot.version>
@@ -37,6 +37,7 @@
     <zookeeper.version>3.4.11</zookeeper.version>
     <common.version>0.0.1-SNAPSHOT</common.version>
     <service.version>0.0.1-SNAPSHOT</service.version>
+    <jedis.version>3.3.0</jedis.version>
   </properties>
 
   <dependencies>
@@ -78,8 +79,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.springframework.session</groupId>
-      <artifactId>spring-session-data-redis</artifactId>
+      <groupId>redis.clients</groupId>
+      <artifactId>jedis</artifactId>
+      <version>${jedis.version}</version>
     </dependency>
     <!--===========Redis End===========-->
 
