--- a/bettersecondskill-web/src/main/resources/application-dev.yml
+++ b/bettersecondskill-web/src/main/resources/application-dev.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:33066/bettersecondskill?serverTimezone=Hongkong
+    url: jdbc:mysql://localhost:33066/bettersecondskill?useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
     username: root
     password: root
     druid:
