--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
     </dependency>
     <!--===========MybatisPlus End===========-->
 
-    <!--===========swagger ui 用于创建RESTFUL API Start===========-->
+    <!--===========zookeeper Start===========-->
     <dependency>
       <groupId>org.apache.zookeeper</groupId>
       <artifactId>zookeeper</artifactId>
@@ -123,7 +123,7 @@
         </exclusion>
       </exclusions>
     </dependency>
-    <!--===========MybatisPlus End===========-->
+    <!--===========zookeeper End===========-->
 
     <!--swagger ui 用于创建RESTFUL API Start-->
     <dependency>
