--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,12 @@
       <artifactId>commons-codec</artifactId>
       <version>1.13</version>
     </dependency>
+
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>2.6</version>
+    </dependency>
     <!--===========Utils End===========-->
   </dependencies>
 
